fix: text color on mobile on about us page

--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -3228,6 +3228,10 @@ h4 {
     padding-bottom: 5rem;
   }
 
+  .md\:text-left {
+    text-align: left;
+  }
+
   .md\:text-2xl {
     font-size: 1.5rem;
     line-height: 2rem;
